--- a/public/web.config
+++ b/public/web.config
@@ -1,14 +1,9 @@
 <configuration>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="false"/>
     <handlers>
-      <remove name="ExtensionlessUrl-Integrated-4.0" />
-      <add name="ExtensionlessUrl-Integrated-4.0" 
-           path="*." 
-           verb="GET,HEAD,POST,DEBUG,DELETE,PUT" 
-           type="System.Web.Handlers.TransferRequestHandler" 
-           preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+	  <remove name="PHP56_via_FastCGI" />
+	  <add name="PHP56_via_FastCGI" path="*.php" verb="GET, PUT, POST, HEAD, OPTIONS, TRACE, PROPFIND, PROPPATCH, MKCOL, COPY, MOVE, LOCK, UNLOCK" modules="FastCgiModule" scriptProcessor="D:\Program Files (x86)\PHP\v5.6\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+	</handlers>
     <rewrite>
       <rules>
         <rule name="Imported Rule 1" stopProcessing="true">
